- Log command result into the Log
- Add Toggle Afk bind to Mod Binds