@@ -1,2 +1,3 @@
 - Log command result into the Log
 - Add Toggle Afk bind to Mod Binds
+- Sticker deletion now asks for confirmation
